--- a/Space_Out/gradle/libs.versions.toml
+++ b/Space_Out/gradle/libs.versions.toml
@@ -16,6 +16,9 @@ hilt-navigation = "1.2.0"
 serialization = "2.0.21"
 serialization-json = "1.7.3"
 
+appcompat = "1.7.0"
+
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntimeKtx" }
@@ -48,6 +51,7 @@ serialization-json = {group = "org.jetbrains.kotlinx", name = "kotlinx-serializa
 
 androidx-navigation = {group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation"}
 androidx-navigation-test = {group = "androidx.navigation", name = "navigation-testing", version.ref = "navigation"}
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
