--- a/Space_Out/app/src/main/AndroidManifest.xml
+++ b/Space_Out/app/src/main/AndroidManifest.xml
@@ -28,14 +28,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".presentation.activity.VideoActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Space_Out">
-        </activity>
+
         <service
-            android:name=".presentation.Service.AudioService"
+            android:name=".service.AudioService"
             android:exported="false"
             android:foregroundServiceType="mediaPlayback"
             tools:ignore="ForegroundServicePermission" />
